prevent overflow of url

--- a/frontend/src/global_styles/content/user-content/_list.sass
+++ b/frontend/src/global_styles/content/user-content/_list.sass
@@ -1,5 +1,6 @@
 .op-uc-list
   page-break-inside: avoid
+  overflow-wrap: anywhere
 
   &_task-list
     list-style: none
